syntax = "proto3";

option go_package = "BSDISYS1KU-En-GO-gruppe_Hand-in_5/biddybidderpb";

service Auction {
  // A client sends a message to the chat
  rpc Bid (bid) returns (ack);

  // A client receives broadcasted messages
  rpc Result (empty) returns (auctionDetails);

  // Start function wow
  rpc StartFunction (time) returns (successStart);

  // To verify connection
  rpc Ping (empty) returns (empty)

  // Sync data
  rpc SyncAuction (auctionObject) returns (empty);

}

// message containing successtatus 
message successStart {
    string message = 1;
}

// auctionDetails
message auctionObject {
  int64 timeCreated = 1;
  int64 duration = 2;
  int64 highestBid = 3; // The current highest bid
  int64 highestBidder = 4; // The current highest bidder
  int64 currentTime = 5;
}

// auctionDetails
message auctionDetails {
  int64 timeleft = 1; // The time that is left on the auction
  int64 highestBid = 2; // The current highest bid
  int64 highestBidder = 3; // The current highest bidder
}

// Message a client sends to the chat
message bid {
  int64 bidderId = 1;
  int64 amount = 2;  // Bidding amount for the auction item
}

message ack {
  bool status = 1;
}

message time {
  int64 time = 1;
}

// Empty message
message empty {}
